2008-05-31  Johan Dahlin  <johan@gnome.org>

    * setup.py: set FFI_LIBS to '', since this is mostly used on win32.

2008-05-30  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c (init_gobject): Call PyType_Ready for
	PyGParamSpec_Type, and add it to the module dict.

2008-05-23  Johan Dahlin  <jdahlin@async.com.br>

	* gio/gio.defs:
	Add default values for all GSeekType variables.

2008-05-21  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c (pyg_spawn_async): Accept None for the
	child_setup parameter of gobject.spawn_async().  Also check that
	it is callable.

2008-04-27  Paul Pogonyshev  <pogonyshev@gmx.net>

	* gobject/pygenum.c (pyg_enum_richcompare): Fix: raise warning as
	exception if asked by PyErr_Warn().

	* gobject/pygflags.c (pyg_flags_richcompare):  Don't return NULL
	after warning; more useful warning message.

	(#480424, borrowing code by Mark Doffman)

2008-04-21  Johan Dahlin  <johan@gnome.org>

	* codegen/h2def.py: Update link to defs format discussion

2008-04-15  Johan Dahlin  <johan@gnome.org>

	* gobject/gobjectmodule.c (init_gobject): Set 
	gobject.GObject.__module__ to gobject._gobject, this
	helps pylint to check public methods of GObject subclasses

	* tests/Makefile.am (tests): 
	* tests/test_gobject.py (TestGObjectAPI.testGObjectModule): 
	Add a test for this

	(#523821, Simon Schampijer)

2008-04-11  Johan Dahlin  <jdahlin@async.com.br>

	* gio/gio.defs (write_async): document.
	Add default values to all flags parameters.

2008-04-11  Johan Dahlin  <johan@gnome.org>

	* gio/gio.defs (read_async, read): document.
	Set io_priority default to G_PRIORITY_DEFAULT.

2008-04-11  Johan Dahlin  <jdahlin@async.com.br>

	* gio/gfile.override:
	* gio/ginputstream.override:
	* gio/goutputstream.override:
	* tests/test_gio.py:
	Move around the order of the callback argument to async methods,
	so it comes before priority and cancellable, which can have default
	values.
